| Summary: | ASTERISK-16676: DAHDIRAS fails to properly initiate pppd unless asterisk is running as root | ||
| Reporter: | Jaco Kroon (jkroon) | Labels: | |
| Date Opened: | 2010-09-14 10:41:15 | Date Closed: | 2011-12-01 12:48:21.000-0600 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Applications/General |
| Versions: | Frequency of Occurrence | ||
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Unless asterisk is running as root (and invoking pppd as such) pppd will fail with: I work around this by commenting out lines 122 + 123 in apps/app_dahdiras.c from asterisk-1.6.2.11, specifically, these two lines: argv[argc++] = "plugin"; argv[argc++] = "dahdi.so"; And then passing DAHDIRAS(call,ras) where /etc/ppp/peers/ras contains: plugin dahdi.so along with my other pppd options. | ||
| Comments: | By: Matt Jordan (mjordan) 2011-12-01 12:48:21.363-0600 DAHDIRAS is currently in 'extended' support, and new features / patches will have to be supported by the Asterisk community. Please feel free to open a new issue with a patch and have a community developer apply the patch to Asterisk. Fore more information on module support states, please see: https://wiki.asterisk.org/wiki/display/AST/Asterisk+Module+Support+States By: Friendly Automation (friendly-automation) 2020-03-25 17:25:14.201-0500 Change 13995 merged by Kevin Harwell: dahdiras: Only set plugin dahdi.so to pppd if we're running as root. [https://gerrit.asterisk.org/c/asterisk/+/13995|https://gerrit.asterisk.org/c/asterisk/+/13995] By: Friendly Automation (friendly-automation) 2020-03-25 17:25:26.421-0500 Change 13996 merged by Kevin Harwell: dahdiras: Only set plugin dahdi.so to pppd if we're running as root. [https://gerrit.asterisk.org/c/asterisk/+/13996|https://gerrit.asterisk.org/c/asterisk/+/13996] By: Friendly Automation (friendly-automation) 2020-03-25 17:25:37.321-0500 Change 13997 merged by Kevin Harwell: dahdiras: Only set plugin dahdi.so to pppd if we're running as root. [https://gerrit.asterisk.org/c/asterisk/+/13997|https://gerrit.asterisk.org/c/asterisk/+/13997] By: Friendly Automation (friendly-automation) 2020-03-25 17:25:48.134-0500 Change 13947 merged by Kevin Harwell: dahdiras: Only set plugin dahdi.so to pppd if we're running as root. [https://gerrit.asterisk.org/c/asterisk/+/13947|https://gerrit.asterisk.org/c/asterisk/+/13947] | ||