dahdiras: Only set plugin dahdi.so to pppd if we're running as root.

Users of this should set plugin dahdi.so in their options file.

ASTERISK-16676

Change-Id: I6d01ad0a10e9fea477876d0941c3f38aac357e91